# bevy_easy_shared_definitions

./: Cargo.toml  README.md
src/: lib.rs
