[package]
name = "bevy_easy_shared_definitions"
version = "0.1.0"
edition = "2021"
authors = ["Cody Williams <me@codythedoer.com>"]
description = "A shared definition library for the bevy_easy suite of plugins."
repository = "https://github.com/CodyTheDoer/bevy_easy_shared_definitions"
license = "MIT OR Apache-2.0"
keywords = ["bevy_easy", "Shared", "Defintions", "Library"]
readme = "README.md"

[dependencies]
bevy = "0.14.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }